platforms/ng-era-platforms/ng-era2-platforms/runtime/execution-platform/engine/tools-legacy/infrastructure/kubernetes/quantum/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    softwareos-base/audit-log-level: minimal
    softwareos-base/governance-policy: standard-v1
    softwareos-base/uri: softwareos-base://k8s/core/service/quantumflow-backend
    softwareos-base/urn: urn:softwareos-base:k8s:core:service:quantumflow-backend:sha256-62f79b76639f10299a1096f62d7dfb7601b69e5ce30687275c0210f435a5cc7a
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: quantumflow
    app.kubernetes.io/part-of: softwareos-base
    app.kubernetes.io/version: 1.0.0
    softwareos-base/environment: development
    softwareos-base/governance: aligned
    softwareos-base/owner: eco-system
    softwareos-base/part-of: softwareos-base
    softwareos-base/platform: core
  name: quantumflow-backend
  namespace: quantumflow
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: quantumflow
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
