platforms/ng-era-platforms/ng-era2-platforms/runtime/execution-platform/engine/tools-legacy/infrastructure/kubernetes/quantum/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    softwareos-base/audit-log-level: minimal
    softwareos-base/governance-policy: standard-v1
    softwareos-base/uri: softwareos-base://k8s/core/service/quantumflow-frontend
    softwareos-base/urn: urn:softwareos-base:k8s:core:service:quantumflow-frontend:sha256-d1e4352cec21e9993249ec01af279e2aa8f4d42eb6ee447ef7256b8800c1aa7e
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: quantumflow
    app.kubernetes.io/part-of: softwareos-base
    app.kubernetes.io/version: 1.0.0
    softwareos-base/environment: development
    softwareos-base/governance: aligned
    softwareos-base/owner: eco-system
    softwareos-base/part-of: softwareos-base
    softwareos-base/platform: core
  name: quantumflow-frontend
  namespace: quantumflow
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: quantumflow
  type: ClusterIP
