platforms/ng-era-platforms/ng-era2-platforms/runtime/execution-platform/engine/tools-legacy/infrastructure/kubernetes/quantum/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    softwareos-base/audit-log-level: minimal
    softwareos-base/governance-policy: standard-v1
    softwareos-base/uri: softwareos-base://k8s/core/ingress/quantumflow-ingress
    softwareos-base/urn: urn:softwareos-base:k8s:core:ingress:quantumflow-ingress:sha256-6249e5721630b3d6022be3f3a688383aba12a5cacd49a7be55515061e7d591f3
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rate-limit: '100'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: quantumflow-ingress
    app.kubernetes.io/part-of: softwareos-base
    app.kubernetes.io/version: 1.0.0
    softwareos-base/environment: development
    softwareos-base/owner: eco-system
    softwareos-base/platform: core
  name: quantumflow-ingress
  namespace: quantumflow
spec:
  rules:
  - host: quantumflow.example.com
    http:
      paths:
      - backend:
          service:
            name: quantumflow-backend
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: quantumflow-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - quantumflow.example.com
    secretName: quantumflow-tls
